--- a/requirements (1).txt
+++ b/requirements (1).txt
@@ -1,12 +1,4 @@
-haversine
 streamlit
 pandas
-numpy
-scikit-learn
-folium
-streamlit-folium
-ortools
-geopy
+xlsxwriter
 openpyxl
-shapely
-networkx
